# glvk-meson

./: .gitignore  meson.build  readme.md
include/: gl_renderer.hpp  pch.hpp  sdl_renderer.hpp  sdl_utility.hpp  vk_renderer.hpp  vk_utility.hpp
include/glad/: glad.h
include/vma/: vk_mem_alloc.h
src/: gl_renderer.cpp  glad.c  main.cpp  sdl_renderer.cpp  sdl_utility.cpp  vk_renderer.cpp  vma_impl.cpp
src/shaders/: shader.frag  shader.vert
